--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -16,11 +16,20 @@
    width: 100%;
    min-height: 100vh;
    min-height: 100dvh;
+   text-align: center;
+}
+
+.main-home h1 {
+   margin: 0 20px;
+   line-height: 1.5;
 }
 
 .main-home h1,
-.homepage-contact h2 {
-   font-size: 1.5rem;
+.homepage-contact__item h2 {
+   font-size: 1.25em;
+   font-family: "Righteous", "Montserrat", sans-serif;
+   text-transform: uppercase;
+   letter-spacing: 3px;
 }
 
 .homepage-contact img {
@@ -161,6 +170,10 @@
    display: block;
    border-radius: 8px;
    transition: background ease 300ms;
+   font-family: "Toko", "Montserrat", sans-serif;
+   letter-spacing: 3px;
+   text-transform: uppercase;
+   font-size: 1.5em;
 }
 
 .trending-games-cta:hover {
@@ -193,8 +206,8 @@
    }
 
    .main-home h1,
-   .homepage-contact h2 {
-      font-size: 2rem;
+   .homepage-contact__item h2 {
+      font-size: 2em;
    }
 
    .review-section-item {
